@@ -95,8 +95,8 @@ activity-date[type="4"], activity-date[type="end-actual"]		{position:absolute; b
 	============================================= */
 span.span_participating-org			{display:block; width:880px; padding:40px; font-size:18px; color:#000; counter-reset:section;}
 span.span_participating-org:before 	{content:"WHO'S INVOLVED?"; font-size:14px; color:#000; display:block; margin-bottom:20px;}
-participating-org::before			{counter-increment:section; content:counter(section) ". "; display:inline-block; vertical-align:top; margin-right:5px; line-height:18px;}
-participating-org 					{display:block; list-style-position:inside; list-style-type:decimal; padding:10px 0;}
+participating-org::before			{counter-increment:section; content:counter(section) ". "; line-height:18px; position:absolute; top:10px; left:0;}
+participating-org 					{display:block; padding:10px 0; padding-left:20px; position:relative; line-height:18px;}
 participating-org a					{display:initial;}
 participating-org a:link			{color:#000;}
 participating-org a:visited			{color:#000; text-decoration:underline;}
@@ -325,12 +325,12 @@ activity-status:before		{content:"ACTIVITY STATUS:"; font-size:14px; color:#000;
 	============================================= */
 span.span_document-link							{width:880px; padding:0 40px; margin:0 auto; counter-reset:section;}
 span.span_document-link:before					{content:"Related Documents"; font-size:34px; color:#000; display:block; padding:40px 0 20px 0; margin-bottom:20px; border-bottom:1px solid #000;}
-a.a_document-link::before						{counter-increment:section; content:counter(section) ". ";}
-a.a_document-link								{display:inline-block; width:880px; padding:10px 0; font-size:1.0em; line-height:1.25em; list-style-type:decimal; list-style-position:inside; color:#000;}
+a.a_document-link::before						{counter-increment:section; content:counter(section) ". "; position:absolute; left:0; top:10px; line-height:20px; font-size:18px;}
+a.a_document-link								{display:inline-block; width:860px; padding:10px 0; font-size:1.0em; line-height:1.25em; padding-left:20px; position:relative; color:#000;}
 a.a_document-link:last-of-type					{padding-bottom:40px;}
 a.a_document-link document-link span-title		{color:#000; padding:0;}
 a.a_document-link document-link span-title:hover{color:#000;}
-document-link									{display:inline;}
+document-link									{display:block;}
 document-link span								{font-size:1.0em; display:block; color:#000;}
 document-link span-title						{display:inline;}
 document-link span-title:nth-of-type(n+1):before{display:none;}
