@@ -7,6 +7,7 @@ CSS fixes for Print Friendly
 Display planned-disbursement element in SAVi
 Fix new element display for Print Friendly
 Update new element in /js for sorting
+Fixed counter increment display for lists
 
 
 Development Portal (2017-06-12 shi)
